--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.profile.active=test
 spring.data.mongodb.database: institute_db
 spring.data.mongodb.host: localhost
 spring.data.mongodb.port: 27017      
